just turn it on and see what breaks