@@ -219,6 +219,7 @@ public class ServerProcess {
         command.add(esHome.resolve("lib").toString());
         // Special circumstances require some modules (not depended on by the main server module) to be explicitly added:
         command.add("--add-modules=jdk.net"); // needed to reflectively set extended socket options
+        command.add("--add-modules=jdk.incubator.vector"); // makes Lucene VectorUtil faster
         command.add("--add-modules=org.elasticsearch.preallocate"); // needed on boot layer as target to open java.io
         command.add("-m");
         command.add("org.elasticsearch.server/org.elasticsearch.bootstrap.Elasticsearch");
